refactor: align GUI and CLI views with graphic controller architecture